I found my stupid mistake at midnight 🌚

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <script defer src="/__/firebase/8.3.3/firebase-functions.js"></script>
     <script defer src="/__/firebase/8.3.3/firebase-messaging.js"></script>
     <script defer src="/__/firebase/8.3.3/firebase-storage.js"></script>
+    <script defer src="/__/firebase/8.3.3/firebase-hosting.js"></script>
     <script defer src="/__/firebase/8.3.3/firebase-analytics.js"></script>
     <script defer src="/__/firebase/8.3.3/firebase-remote-config.js"></script>
     <script defer src="/__/firebase/8.3.3/firebase-performance.js"></script>
@@ -21,12 +22,12 @@
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
     -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
+    <!-- <script defer src="/__/firebase/init.js?useEmulator=true"></script> -->
   </head>
   <body>
     <div id="root"></div>
 
-    <script>
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", function () {
         const loadEl = document.querySelector("#load");
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
@@ -66,6 +67,6 @@
             "Error loading the Firebase SDK, check the console.";
         }
       });
-    </script>
+    </script> -->
   </body>
 </html>
